updating of gh links

--- a/ip.html
+++ b/ip.html
@@ -16,20 +16,20 @@
           <p class="int"> Below are some of Projects I have tried to work on;</p>
 
               <ol>
-                <li><a href="https://github.com/cnafoyo/hello-world">Hello World</a></li>
+                <li><a href="https://cnafoyo.github.io/hello-world/">Hello World</a></li>
                    <p> This is a project on introduction to html. It is all written in html</p>
 
                 <li><a href="https://cnafoyo.github.io/my-first-webpage/">My first webpage</a></li>
-                  <p> This is my very first webpage with some help from Moringa School, <br>
+                  <p> This is my very first HTML webpage with some help from Moringa School, <br>
                       about some of the things am going to learn and the coding languages.</p>
 
                 <li><a href="https://cnafoyo.github.io/my-first-webpage/my-favorite-things.html">My Favorite Things</a></li>
                   <p> The site talks abouth the favorite things, my best friends,<br>
-                     my favorite food and other favorite things I love doing</p>
+                     my favorite food and other favorite things I love doing in html and style.</p>
 
-                <li><a href="https://github.com/cnafoyo/Inspiration">Inspiration</a></li>
+                <li><a href="https://cnafoyo.github.io/inspire/">Inspiration</a></li>
 
-                  <p>This is an inpiration story about a man's favorite donkey. That in life, you may face the same kind
+                  <p>This is an inpiration story about a man's favorite donkey in html and css. That in life, you may face the same kind
                     of situation,<br> when tons of problem and misfortune fall upon you. In such situation, dont get sad.shake
                     off your problems,<br> they will subside and you step up to greater success and opportunities in life,</p>
               </ol>
