--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Independent Project - Portfolio Landing Page</title>
-        <link href="css/styles.css" rel="stylesheet" type="text/css">
+        <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     </head>
     <body>
         <div class="test-box">
