Editing of README and change hp.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
         <title>Independent Project - Portfolio Landing Page</title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     </head>
-  
     <body>
         <div class="test-box">
-        <div style="background-image: url('images/hike.jpg');">
+        <div style="background-image: url('images/hike.jpg'); background-repeat: no-repeat;">
 
           <h1>Landing page for programing Portfolio</h1>
 
