--- a/ip.html
+++ b/ip.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="test-box">
-        <div style="background-image: url('images/hike.jpg');">
+        <div style="background-image: url('images/hike.jpg'); background-repeat: no-repeat;">
 
           <h1>Landing page for programing Portfolio</h1>
 
