--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Independent Project - Portfolio Landing Page</title>
-        <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+
+          <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     </head>
     <body>
-        <div class="test-box">
-        <div style="background-image: url('images/hike.jpg'); background-repeat: no-repeat;">
 
-          <h1>Landing page for programing Portfolio</h1>
+        <div class="container">
 
+
+  <div class="jumbotron text-center">
+
+      <div style="background-image: url('images/laptop.jpg');">
+
+          <h1 style =" font-family:verdana;color:red">Landing page for programing Portfolio</h1>
+  </div>
+    </div>
+  <div style="background-image: url('images/hike.jpg');">
           <p>If I’m gonna tell a real story, I’m gonna start with my name.</p>
           <p> My name is<strong> Billy Nafoyo Chepkemoi </strong>and am a<em> newbie</em> to Code.</p>
           <p class="intro">My journey into the world of web development starts here,<br> I hope to summit the hill ahead of me in becoming a developer</p>
@@ -33,13 +42,15 @@
                     of situation,<br> when tons of problem and misfortune fall upon you. In such situation, dont get sad.shake
                     off your problems,<br> they will subside and you step up to greater success and opportunities in life,</p>
               </ol>
-
-                  <div class="column">
-              <h2 class ="heading">About me.</h2>
+    <div class="container">
+        <div class="row">
+                 <div class="col-sm-4">
+              <h2 class ="heading" style="color:red;">About me.</h2>
 
                     <p>I am a mother of eleven and eight year old boys, born and bred in Eldoret town. I just joined the IT team as  customer channels solution analyst at Safaricom plc, after working as a customer care executive for about ten years. Though I have a business background, I have always had an eye for IT.  Everything about IT fascinates me, that is why I never stopped applying for jobs in the IT department. When I finally joined the team,  I knew I needed to get my hands on some skills that can be interesting.  When this opportunity presented itself, I knew this is it!</p>
                  </div>
-              <h2 class ="heading">Why web development ? </h2>
+                  <div class="col-sm-4">
+              <h2 class ="heading" style="color:red;font-family:verdana">Why web development? </h2>
               <ol>
                 <li>Well, its one of the skill I believe anyone can do it.</li>
                 <li> computer programming teaches you how to think, which make you a better thinker</li>
@@ -48,8 +59,9 @@
                 <li> Make the impossible possible.</li>
                 <li> This leads to multiple career path that I can choose from within the organization</li>
               </ol>
-
-              <h2 class ="heading">Current interest and hobbies</h2>
+                </div>
+                <div class="col-sm-4">
+              <h2 class ="heading"style="color:red;font-family:verdana">Current interest and hobbies</h2>
                     <p>Am generally an outdoor person, you will always find me;</p>
               <ul>
                 <li>Biking</li>
@@ -58,8 +70,9 @@
                 <li>Doing triathlons</li> and
                 <li>Soon coding.</li>
             </ul>
-
+              </div>
+          </div>
     </div>
     </div>
-    </body>
+    </body
 </html>
