--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 
       <div style="background-image: url('images/laptop.jpg');">
 
-          <h1 style =" font-family:verdana;color:red">Landing page for programing Portfolio</h1>
+          <h1 style =" font-family:Courier;color:darkred">Landing page for programing Portfolio</h1>
   </div>
     </div>
   <div style="background-image: url('images/hike.jpg');">
-          <p>If I’m gonna tell a real story, I’m gonna start with my name.</p>
+          <p style="font-family:Sans-serif;">If I’m gonna tell a real story, I’m gonna start with my name.</p>
           <p> My name is<strong> Billy Nafoyo Chepkemoi </strong>and am a<em> newbie</em> to Code.</p>
           <p class="intro">My journey into the world of web development starts here,<br> I hope to summit the hill ahead of me in becoming a developer</p>
           <p class="int"> Below are some of Projects I have tried to work on;</p>
 
               <ol>
-                <li><a href="https://cnafoyo.github.io/hello-world/">Hello World</a></li>
+                <li><a href="https://cnafoyo.github.io/hello-world/"style="color:purple;font-family:Courier;">Hello World</a></li>
                    <p> This is a project on introduction to html. It is all written in html</p>
 
-                <li><a href="https://cnafoyo.github.io/my-first-webpage/">My first webpage</a></li>
+                <li><a href="https://cnafoyo.github.io/my-first-webpage/" style ="color:purple ;font-family:Courier;">My first webpage</a></li>
                   <p> This is my very first HTML webpage with some help from Moringa School, <br>
                       about some of the things am going to learn and the coding languages.</p>
 
-                <li><a href="https://cnafoyo.github.io/my-first-webpage/my-favorite-things.html">My Favorite Things</a></li>
+                <li><a href="https://cnafoyo.github.io/my-first-webpage/my-favorite-things.html" style="color:purple; font-family:Courier;">My Favorite Things</a></li>
                   <p> The site talks abouth the favorite things, my best friends,<br>
                      my favorite food and other favorite things I love doing in html and style.</p>
 
-                <li><a href="https://cnafoyo.github.io/inspire/">Inspiration</a></li>
+                <li><a href="https://cnafoyo.github.io/inspire/" style="color: Aquamarine;font-family:Courier;">Inspiration</a></li>
 
                   <p>This is an inpiration story about a man's favorite donkey in html and css. That in life, you may face the same kind
                     of situation,<br> when tons of problem and misfortune fall upon you. In such situation, dont get sad.shake
@@ -45,12 +45,12 @@
     <div class="container">
         <div class="row">
                  <div class="col-sm-4">
-              <h2 class ="heading" style="color:red;">About me.</h2>
+              <h2 class ="heading" style="color:Aquamarine;font-size :26px;">About me.</h2>
 
                     <p>I am a mother of eleven and eight year old boys, born and bred in Eldoret town. I just joined the IT team as  customer channels solution analyst at Safaricom plc, after working as a customer care executive for about ten years. Though I have a business background, I have always had an eye for IT.  Everything about IT fascinates me, that is why I never stopped applying for jobs in the IT department. When I finally joined the team,  I knew I needed to get my hands on some skills that can be interesting.  When this opportunity presented itself, I knew this is it!</p>
                  </div>
                   <div class="col-sm-4">
-              <h2 class ="heading" style="color:red;font-family:verdana">Why web development? </h2>
+              <h2 class ="heading" style="color:Aquamarine;font-family:verdana;font-size :26px;">Why web development? </h2>
               <ol>
                 <li>Well, its one of the skill I believe anyone can do it.</li>
                 <li> computer programming teaches you how to think, which make you a better thinker</li>
@@ -61,7 +61,7 @@
               </ol>
                 </div>
                 <div class="col-sm-4">
-              <h2 class ="heading"style="color:red;font-family:verdana">Current interest and hobbies</h2>
+              <h2 class ="heading"style="color:  Aquamarine;font-family:verdana; font-size :26px;">Current interest <br>and hobbies</h2>
                     <p>Am generally an outdoor person, you will always find me;</p>
               <ul>
                 <li>Biking</li>
