change of font colors

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="https://cnafoyo.github.io/hello-world/"style="color:purple;font-family:Courier;">Hello World</a></li>
                    <p> This is a project on introduction to html. It is all written in html</p>
 
-                <li><a href="https://cnafoyo.github.io/my-first-webpage/" style ="color:purple ;font-family:Courier;">My first webpage</a></li>
+                <li><a href="https://cnafoyo.github.io/my-first-webpage/" style ="color:red ;font-family:Courier;">My first webpage</a></li>
                   <p> This is my very first HTML webpage with some help from Moringa School, <br>
                       about some of the things am going to learn and the coding languages.</p>
 
@@ -36,7 +36,7 @@
                   <p> The site talks abouth the favorite things, my best friends,<br>
                      my favorite food and other favorite things I love doing in html and style.</p>
 
-                <li><a href="https://cnafoyo.github.io/inspire/" style="color: Aquamarine;font-family:Courier;">Inspiration</a></li>
+                <li><a href="https://cnafoyo.github.io/inspire/" style="color: red;font-family:Courier;">Inspiration</a></li>
 
                   <p>This is an inpiration story about a man's favorite donkey in html and css. That in life, you may face the same kind
                     of situation,<br> when tons of problem and misfortune fall upon you. In such situation, dont get sad.shake
