editing of hobbies list

--- a/ip.html
+++ b/ip.html
@@ -67,8 +67,8 @@
                 <li>Biking</li>
                 <li>Hiking</li>
                 <li>Playing basket ball</li>
-                <li>Doing triathlons</li>
-                <li>Very Soon coding.</li>
+                <li>Doing triathlons</li> and
+                <li>Soon coding.</li>
             </ul>
               </div>
           </div>
